// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders disabled input 1`] = `
<styled.span
  disabled={true}
>
  <styled.input
    disabled={true}
    placeholder="test"
    theme={
      Object {
        "blackColor": "#000000",
        "darkBlueColor": "#02469B",
        "darkGrayColor": "#4A4A4A",
        "darkestBlueColor": "#02254D",
        "darkestGrayColor": "#303030",
        "greenColor": "#76B041",
        "lightBlueColor": "#0190D0",
        "lightGrayColor": "#D8D8D8",
        "lightestBlueColor": "#00FEFE",
        "mediumGrayColor": "#979797",
        "primaryColor": "#1676B7",
        "secondaryColor": "#17BEBB",
        "whiteBackgroundColor": "#fdfdfd",
        "whiteColor": "#ffffff",
        "yellowColor": "#FFC914",
      }
    }
  />
  <styled.span
    disabled={true}
  />
</styled.span>
`;

exports[`correctly renders password input 1`] = `
<styled.span
  disabled={false}
>
  <styled.input
    disabled={false}
    placeholder="test"
    theme={
      Object {
        "blackColor": "#000000",
        "darkBlueColor": "#02469B",
        "darkGrayColor": "#4A4A4A",
        "darkestBlueColor": "#02254D",
        "darkestGrayColor": "#303030",
        "greenColor": "#76B041",
        "lightBlueColor": "#0190D0",
        "lightGrayColor": "#D8D8D8",
        "lightestBlueColor": "#00FEFE",
        "mediumGrayColor": "#979797",
        "primaryColor": "#1676B7",
        "secondaryColor": "#17BEBB",
        "whiteBackgroundColor": "#fdfdfd",
        "whiteColor": "#ffffff",
        "yellowColor": "#FFC914",
      }
    }
    type="password"
  />
  <styled.span
    disabled={false}
  />
</styled.span>
`;

exports[`correctly renders password input 2`] = `
<styled.span
  disabled={false}
>
  <styled.input
    disabled={false}
    placeholder="test"
    theme={
      Object {
        "blackColor": "#000000",
        "darkBlueColor": "#02469B",
        "darkGrayColor": "#4A4A4A",
        "darkestBlueColor": "#02254D",
        "darkestGrayColor": "#303030",
        "greenColor": "#76B041",
        "lightBlueColor": "#0190D0",
        "lightGrayColor": "#D8D8D8",
        "lightestBlueColor": "#00FEFE",
        "mediumGrayColor": "#979797",
        "primaryColor": "#1676B7",
        "secondaryColor": "#17BEBB",
        "whiteBackgroundColor": "#fdfdfd",
        "whiteColor": "#ffffff",
        "yellowColor": "#FFC914",
      }
    }
    type="number"
  />
  <styled.span
    disabled={false}
  />
</styled.span>
`;

exports[`correctly renders search input 1`] = `
<styled.span
  disabled={false}
>
  <styled.span>
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f002",
            "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
          ],
          "iconName": "search",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </styled.span>
  <styled.input
    disabled={false}
    placeholder="test"
    theme={
      Object {
        "blackColor": "#000000",
        "darkBlueColor": "#02469B",
        "darkGrayColor": "#4A4A4A",
        "darkestBlueColor": "#02254D",
        "darkestGrayColor": "#303030",
        "greenColor": "#76B041",
        "lightBlueColor": "#0190D0",
        "lightGrayColor": "#D8D8D8",
        "lightestBlueColor": "#00FEFE",
        "mediumGrayColor": "#979797",
        "primaryColor": "#1676B7",
        "secondaryColor": "#17BEBB",
        "whiteBackgroundColor": "#fdfdfd",
        "whiteColor": "#ffffff",
        "yellowColor": "#FFC914",
      }
    }
    type="search"
  />
  <styled.span
    disabled={false}
  />
</styled.span>
`;

exports[`renders normal Input correctly 1`] = `
<styled.span
  disabled={false}
>
  <styled.input
    disabled={false}
    theme={
      Object {
        "blackColor": "#000000",
        "darkBlueColor": "#02469B",
        "darkGrayColor": "#4A4A4A",
        "darkestBlueColor": "#02254D",
        "darkestGrayColor": "#303030",
        "greenColor": "#76B041",
        "lightBlueColor": "#0190D0",
        "lightGrayColor": "#D8D8D8",
        "lightestBlueColor": "#00FEFE",
        "mediumGrayColor": "#979797",
        "primaryColor": "#1676B7",
        "secondaryColor": "#17BEBB",
        "whiteBackgroundColor": "#fdfdfd",
        "whiteColor": "#ffffff",
        "yellowColor": "#FFC914",
      }
    }
  />
  <styled.span
    disabled={false}
  />
</styled.span>
`;
